clang/test/BSC/Method/BuiltInType/int_this_param_check.cbs
// RUN: %clang_cc1 -verify %s

void int::increase(int this) { // expected-error {{int is not supported on this target}}
}